# quickencode

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: download-ffmpeg.js
src/: App.tsx  VideoEditor.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: context-menu.nsh  installer-hooks.nsi
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/wix/: context-menu.wxs
src/hooks/: useOpenFile.ts
